syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.system_events.grpc";
option java_outer_classname = "SystemEventsProto";

service EventLogger {
  rpc LogEvent (EventRequest) returns (EventResponse);
}

message EventRequest {
  string actionType = 1;
  string service = 2;
  string resource = 3;
  string status = 4;
  string username = 5;
}

message EventResponse {
  bool success = 1;
  string message = 2;
}
